fix: iOS display cutouts caused a scrollbar in some cases

--- a/src/style.css
+++ b/src/style.css
@@ -107,7 +107,7 @@
 [data-rsbs-scroll]:focus {
   outline: none;
 }
-[data-rsbs-has-footer='false'] [data-rsbs-scroll] {
+[data-rsbs-has-footer='false'] [data-rsbs-content] {
   padding-bottom: env(safe-area-inset-bottom);
 }
 [data-rsbs-content] {
